2005-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Improved cygwin support. [bug #1315334]
	By Yaakov Selkowitz.

2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/makeversion.rb: Removed. Use make_version_header() of 
	Ruby/GLib.
	* extconf.rb: Follow above change.
	
2005-10-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix a linking error on Cygwin.

2005-09-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatk.c: Renamed Atk::VERSION to Atk::BUILD_VERSION.
	Removed Atk::(MAJOR|MINOR|MICRO)_VERSION.

2005-09-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatk.c: Added Atk::VERSION, Atk::(MAJOR|MINOR|MICRO)_VERSION.
	* src/rbatkutil.c: Added Atk::Util::KeyEventType, Atk.focus_object,
	.(add|remove)_key_event_listener, .focus_tracker_notify. 
	Move all methods/constants to Atk::Util from Atk.
	* src/rbatktext.c: Added Atk::Text::Attribute#type_register, #for_name, 
	#get_value.
	* src/rbatkstreamablecontent.c: Added Atk::StreamableContent#get_stream. 

2005-09-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatkrelationset.c: Added Atk::RelationSet#add_relation 
	for ATK-1.9.0.
	* src/makeversion.rb: Added. Version information and 
	ATK_CHECK_VERSION.
	* extconf.rb, src/rbatk.h: Added version information.
	* src/depend: Added. Install rbatk.h, rbatkversion.h.
	* src/rbatkrelation.c: Added Atk::Relation#add_target for ATK-1.9.0.
	* src/rbatkobject.c: Support ATK-1.10.

2005-02-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatktext.c: Fix a compiling problem on MSVC++/atk-1.9.0.

2005-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbatktext.c: Fix a compiling problem on MSVC++/atk-1.8.0.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2005-01-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Support MS VC++. 

2004-12-03  Vincent Isambart <isambart@netcourrier.com>

	* extconf.rb: Corrected a little parse error (just removed an end of line).
