@@ -1,3 +1,8 @@
+2006-05-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbatktext.c (rbatk_text_remove_selection): Fix to convert the
+	third argument of rb_raise from VALUE to int.
+
 2005-11-23  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* extconf.rb: Improved cygwin support. [bug #1315334]
